--- a/.gitmodules
+++ b/.gitmodules
@@ -44,3 +44,6 @@
 	path = DrumKit
 	url = https://github.com/4ms/DrumKit.git
 	branch = metamodule
+[submodule "Venom"]
+	path = Venom
+	url = https://github.com/4ms/VenomModules.git
