Add Venom to CI and `all` build

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -22,6 +22,7 @@ on:
           - CosineKitty-Sapphire
           - Fundamental
           - Valley
+          - Venom
           - "./"
       do_release:
         description: 'Create Release (must also tag!)'
