Cleanup kocmoc MM cmake

--- a/kocmoc/CMakeLists.txt
+++ b/kocmoc/CMakeLists.txt
@@ -1,23 +1,15 @@
 cmake_minimum_required(VERSION 3.22)
 
-#########################################################
-# Step 1: Include plugin.cmake from the SDK. 
-# You must do this before anything else since it defines the TOOLCHAIN
 include(${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugin-sdk/plugin.cmake)
 
-#########################################################
-# Step 2: Define your project name, vesion, etc
 project(KocmocMetaModulePlugin
     VERSION     0.1
     DESCRIPTION "Kocmoc Plugin for MetaModule"
     LANGUAGES   C CXX ASM
 )
 
-#########################################################
-# Step 3: Create a cmake target for your plugin and add all your sources, compile flags, includes, etc.
 add_library(kocmoc STATIC)
 
-# convenient variable pointing to the VCV Rack repo
 set(SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/kocmoc-rack-modules/src)
 
 target_sources(kocmoc
@@ -57,13 +49,14 @@ target_compile_definitions(kocmoc PRIVATE FLOATDSP)
 
 set_property(TARGET kocmoc PROPERTY CXX_STANDARD 20)
 
+if("${INSTALL_DIR}" STREQUAL "")
+    set(INSTALL_DIR ${CMAKE_CURRENT_LIST_DIR}/metamodule-plugins)
+endif()
 
-#########################################################
-# Step 4: call create_plugin()
 create_plugin(
     SOURCE_LIB      kocmoc                                                    # This is the cmake target name (defined in add_target)
     PLUGIN_NAME     kocmoc                                                    # This must match the brand "slug" used in VCV Rack
     PLUGIN_JSON     ${CMAKE_CURRENT_LIST_DIR}/kocmoc-rack-modules/plugin.json # Path to the plugin.json file used by VCV Rack
     SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets                          # Path to the assets/ dir containing the PNGs
-    DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins           # Path to where you want the plugin file output
+    DESTINATION     ${INSTALL_DIR}                                            # Path to where you want the plugin file output
 )
