--- a/Geodesics/CMakeLists.txt
+++ b/Geodesics/CMakeLists.txt
@@ -1,23 +1,25 @@
 cmake_minimum_required(VERSION 3.22)
 
-#########################################################
-# Step 1: Include plugin.cmake from the SDK. 
-# You must do this before anything else since it defines the TOOLCHAIN
-include(${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugin-sdk/plugin.cmake)
+if(NOT "${METAMODULE_SDK_DIR}" STREQUAL "")
+	message("METAMODULE_SDK_DIR set by CMake variable ${METAMODULE_SDK_DIR}")
+elseif (DEFINED ENV{METAMODULE_SDK_DIR})
+    set(METAMODULE_SDK_DIR "$ENV{METAMODULE_SDK_DIR}")
+	message("METAMODULE_SDK_DIR set by environment variable ${METAMODULE_SDK_DIR}")
+else()
+    set(METAMODULE_SDK_DIR "${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugin-sdk")
+	message("METAMODULE_SDK_DIR set to default: ${METAMODULE_SDK_DIR}")
+endif()
 
-#########################################################
-# Step 2: Define your project name, vesion, etc
+include(${METAMODULE_SDK_DIR}/plugin.cmake)
+
 project(GeodesicsMetaModulePlugin 
     VERSION     0.1 
     DESCRIPTION "Geodesics Plugin for MetaModule" 
     LANGUAGES   C CXX ASM
 )
 
-#########################################################
-# Step 3: Create a cmake target for your plugin and add all your sources, compile flags, includes, etc.
 add_library(Geodesics STATIC)
 
-# convenient variable pointing to the VCV Rack repo
 set(SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/Geodesics)
 
 target_sources(Geodesics
@@ -41,20 +43,11 @@ target_sources(Geodesics
 
 target_include_directories(Geodesics PRIVATE 
 	${SOURCE_DIR}/src 
-	# ${CMAKE_CURRENT_LIST_DIR}
-)
-
-target_compile_options(Geodesics 
-	PRIVATE 
-	# -Wno-double-promotion 
-	# $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-float-conversion>
 )
 
 set_property(TARGET Geodesics PROPERTY CXX_STANDARD 20)
 
 
-#########################################################
-# Step 4: call create_plugin()
 create_plugin(
     SOURCE_LIB      Geodesics                                         # This is the cmake target name (defined in add_target)
     PLUGIN_NAME     Geodesics                                         # This must match the brand "slug" used in VCV Rack
