--- a/CosineKitty-Sapphire/CMakeLists.txt
+++ b/CosineKitty-Sapphire/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.22)
 
 if(NOT "${METAMODULE_SDK_DIR}" STREQUAL "")
-	message("METAMODULE_SDK_DIR set by CMake variable ${METAMODULE_SDK_DIR}")
+    message("METAMODULE_SDK_DIR set by CMake variable ${METAMODULE_SDK_DIR}")
 elseif (DEFINED ENV{METAMODULE_SDK_DIR})
     set(METAMODULE_SDK_DIR "$ENV{METAMODULE_SDK_DIR}")
-	message("METAMODULE_SDK_DIR set by environment variable ${METAMODULE_SDK_DIR}")
+    message("METAMODULE_SDK_DIR set by environment variable ${METAMODULE_SDK_DIR}")
 else()
     set(METAMODULE_SDK_DIR "${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugin-sdk")
-	message("METAMODULE_SDK_DIR set to default: ${METAMODULE_SDK_DIR}")
+    message("METAMODULE_SDK_DIR set to default: ${METAMODULE_SDK_DIR}")
 endif()
 
 include(${METAMODULE_SDK_DIR}/plugin.cmake)
@@ -48,13 +48,13 @@ target_sources(Sapphire
     ${SOURCE_DIR}/src/sapphire_globals.cpp
     ${SOURCE_DIR}/src/sapphire_panel.cpp
 
-	firmware-stubs.cc
+    firmware-stubs.cc
     plugin.cpp 
 )
 
 target_include_directories(Sapphire PRIVATE 
-	${SOURCE_DIR}/src 
-	${CMAKE_CURRENT_LIST_DIR}
+    ${SOURCE_DIR}/src 
+    ${CMAKE_CURRENT_LIST_DIR}
 )
 
 target_compile_options(Sapphire PRIVATE 
@@ -64,10 +64,14 @@ target_compile_options(Sapphire PRIVATE
 
 set_property(TARGET Sapphire PROPERTY CXX_STANDARD 20)
 
+if("${INSTALL_DIR}" STREQUAL "")
+    set(INSTALL_DIR ${CMAKE_CURRENT_LIST_DIR}/metamodule-plugins)
+endif()
+
 create_plugin(
     SOURCE_LIB      Sapphire                            # This is the cmake target name (defined in add_target)
     PLUGIN_NAME     CosineKitty-Sapphire                # This must match the brand "slug" used in VCV Rack
-	PLUGIN_JSON     ${SOURCE_DIR}/plugin.json
+    PLUGIN_JSON     ${SOURCE_DIR}/plugin.json
     SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets    # Path to the assets/ dir containing the PNGs
-    DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins    # Path to where you want the plugin dir output: it can be shared between multiple plugins
+    DESTINATION     ${INSTALL_DIR}                      # Path to where you want the plugin dir output: it can be shared between multiple plugins
 )
