--- a/Valley/CMakeLists.txt
+++ b/Valley/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.22)
 
 if(NOT "${METAMODULE_SDK_DIR}" STREQUAL "")
-	message("METAMODULE_SDK_DIR set by CMake variable ${METAMODULE_SDK_DIR}")
+    message("METAMODULE_SDK_DIR set by CMake variable ${METAMODULE_SDK_DIR}")
 elseif (DEFINED ENV{METAMODULE_SDK_DIR})
     set(METAMODULE_SDK_DIR "$ENV{METAMODULE_SDK_DIR}")
-	message("METAMODULE_SDK_DIR set by environment variable ${METAMODULE_SDK_DIR}")
+    message("METAMODULE_SDK_DIR set by environment variable ${METAMODULE_SDK_DIR}")
 else()
     set(METAMODULE_SDK_DIR "${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugin-sdk")
-	message("METAMODULE_SDK_DIR set to default: ${METAMODULE_SDK_DIR}")
+    message("METAMODULE_SDK_DIR set to default: ${METAMODULE_SDK_DIR}")
 endif()
 
 include(${METAMODULE_SDK_DIR}/plugin.cmake)
@@ -27,7 +27,7 @@ target_sources(Valley
     # ${SOURCE_DIR}/src/Terrorform/Terrorform.cpp
 
     ${SOURCE_DIR}/src/Interzone/Interzone.cpp
-    
+
     ${SOURCE_DIR}/src/Amalgam/Amalgam.cpp
     ${SOURCE_DIR}/src/Amalgam/VecAmalgam.cpp
 
@@ -56,12 +56,12 @@ target_sources(Valley
 )
 
 target_include_directories(Valley PRIVATE 
-	${SOURCE_DIR}/src 
+    ${SOURCE_DIR}/src 
 )
 
 target_compile_options(Valley PRIVATE 
-	-Wno-double-promotion 
-	$<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-float-conversion>
+    -Wno-double-promotion 
+    $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-float-conversion>
 )
 
 target_compile_definitions(Valley PRIVATE
@@ -70,11 +70,14 @@ target_compile_definitions(Valley PRIVATE
 
 set_property(TARGET Valley PROPERTY CXX_STANDARD 20)
 
+if("${INSTALL_DIR}" STREQUAL "")
+    set(INSTALL_DIR ${CMAKE_CURRENT_LIST_DIR}/metamodule-plugins)
+endif()
 
 create_plugin(
     SOURCE_LIB      Valley                              # This is the cmake target name (defined in add_target)
     PLUGIN_NAME     Valley                              # This must match the brand "slug" used in VCV Rack
     PLUGIN_JSON     ${SOURCE_DIR}/plugin.json           # Path to the plugin.json file used by VCV Rack
     SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets    # Path to the assets/ dir containing the PNGs
-    DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins  # Dir where plugin .mmplugin file should be put
+    DESTINATION     ${INSTALL_DIR}                      # Dir where plugin .mmplugin file should be put
 )
