--- a/kocmoc/CMakeLists.txt
+++ b/kocmoc/CMakeLists.txt
@@ -1,6 +1,16 @@
 cmake_minimum_required(VERSION 3.22)
 
-include(${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugin-sdk/plugin.cmake)
+if(NOT "${METAMODULE_SDK_DIR}" STREQUAL "")
+	message("METAMODULE_SDK_DIR set by CMake variable ${METAMODULE_SDK_DIR}")
+elseif (DEFINED ENV{METAMODULE_SDK_DIR})
+    set(METAMODULE_SDK_DIR "$ENV{METAMODULE_SDK_DIR}")
+	message("METAMODULE_SDK_DIR set by environment variable ${METAMODULE_SDK_DIR}")
+else()
+    set(METAMODULE_SDK_DIR "${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugin-sdk")
+	message("METAMODULE_SDK_DIR set to default: ${METAMODULE_SDK_DIR}")
+endif()
+
+include(${METAMODULE_SDK_DIR}/plugin.cmake)
 
 project(KocmocMetaModulePlugin
     VERSION     0.1
@@ -38,11 +48,6 @@ target_sources(kocmoc
 
 target_include_directories(kocmoc PRIVATE
 	${SOURCE_DIR}
-)
-
-target_compile_options(kocmoc
-	PRIVATE
-	# No flags needed
 )
 
 target_compile_definitions(kocmoc PRIVATE FLOATDSP)
