Modify CMake to get squinky to build and load

--- a/Squinky/CMakeLists.txt
+++ b/Squinky/CMakeLists.txt
@@ -9,11 +9,18 @@ set(SOURCE_DIR ./squinky)
 add_library(SquinkyLabs STATIC)
 
 target_compile_definitions(SquinkyLabs PRIVATE __V1x __PLUGIN)
+target_compile_definitions(SquinkyLabs PRIVATE _FILT)
 
 
 target_sources(SquinkyLabs PRIVATE
     ${SOURCE_DIR}/src/FiltModule.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/SquinkyLabs.cpp
+    ${SOURCE_DIR}/src/Squinky.cpp
+
+    ${SOURCE_DIR}/dsp/utils/AudioMath.cpp
+    ${SOURCE_DIR}/dsp/utils/ObjectCache.cpp
+    ${SOURCE_DIR}/dsp/utils/AsymWaveshaper.cpp
+    ${SOURCE_DIR}/dsp/filters/ButterworthFilterDesigner.cpp
+    ${SOURCE_DIR}/dsp/third-party/falco/DspFilter.cpp
 )
 
 # Add includes and compile options for source repo
@@ -32,7 +39,7 @@ target_include_directories(SquinkyLabs PRIVATE
 # Call this to link and create the plugin file
 create_plugin(
     SOURCE_LIB      SquinkyLabs
-    PLUGIN_NAME     SquinkyLabs
+    PLUGIN_NAME     squinkylabs-plug1
     PLUGIN_JSON     ${CMAKE_CURRENT_LIST_DIR}/squinky/plugin.json
     SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets
     DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/metamodule-plugins
