--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -80,10 +80,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: FranzDiebold/github-env-vars-action@v2
 
-        # Convert $CI_REF_NAME to $PLUGIN_NAME
-        # CI_REF_NAME = CVfunk-v1.5.3
-        # $f = CVfunk.mmplugin
-        # if input.plugin == "./"
       - name: Build
         run: |
           if [ "${{ inputs.plugin }}" == "Fundamental" ] || [ "${{ inputs.plugin }}" == "CountModula" ]; then
@@ -93,6 +89,7 @@ jobs:
           fi
           mkdir -p metamodule-plugins
           cd ${{ inputs.plugin }}/${subdir}
+          jq -e . plugin-mm.json >/dev/null || exit 1
           cmake -B build -G Ninja -DMETAMODULE_SDK_DIR=${{ github.workspace }}/metamodule-plugin-sdk -DINSTALL_DIR=${{ github.workspace }}/metamodule-plugins
           cmake --build build
           cd ${{ github.workspace }}/metamodule-plugins/
