Add Fundamental submodule (2)

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 [submodule "Venom"]
 	path = Venom
 	url = https://github.com/4ms/VenomModules.git
+[submodule "Fundamental2"]
+	path = Fundamental2
+	url = https://github.com/4ms/VCVRack-Fundamental
