--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -81,6 +81,16 @@ jobs:
         uses: FranzDiebold/github-env-vars-action@v2
 
       - name: Build
+        if: ${{ inputs.plugin == "./" }}
+        run: |
+          mkdir -p metamodule-plugins
+          cmake -B build -G Ninja -DMETAMODULE_SDK_DIR=${{ github.workspace }}/metamodule-plugin-sdk -DINSTALL_DIR=${{ github.workspace }}/metamodule-plugins
+          cmake --build build
+          cd ${{ github.workspace }}/metamodule-plugins/
+          for f in *.mmplugin; do mv $f ${f%.mmplugin}-${{ env.CI_REF_NAME }}.mmplugin; done;
+
+      - name: Build
+        if: ${{ inputs.plugin != "./" }}
         run: |
           if [ "${{ inputs.plugin }}" == "Fundamental" ] || [ "${{ inputs.plugin }}" == "CountModula" ]; then
             subdir="metamodule"
@@ -93,7 +103,7 @@ jobs:
           cmake -B build -G Ninja -DMETAMODULE_SDK_DIR=${{ github.workspace }}/metamodule-plugin-sdk -DINSTALL_DIR=${{ github.workspace }}/metamodule-plugins
           cmake --build build
           cd ${{ github.workspace }}/metamodule-plugins/
-          if [ "${{ inputs.plugin }}" == "./" ]; then for f in *.mmplugin; do mv $f ${f%.mmplugin}-${{ env.CI_REF_NAME }}.mmplugin; done; else for f in *.mmplugin; do mv $f ${{ env.CI_REF_NAME }}.mmplugin; done; fi
+          for f in *.mmplugin; do mv $f ${{ env.CI_REF_NAME }}.mmplugin; done;
 
 
       - name: Release
