CI: update path for Sapphire

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,7 +19,7 @@ on:
           - NANOModules
           - OrangeLine
           - RebelTech
-          - CosineKitty-Sapphire
+          - Sapphire
           - Fundamental
           - Venom
           - "./"
