--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,7 +19,7 @@ on:
           - NANOModules
           - OrangeLine
           - RebelTech
-          - Sapphire
+          - CosineKitty-Sapphire
           - Fundamental
           - Venom
           - "./"
@@ -92,7 +92,7 @@ jobs:
       - name: Build
         if: ${{ inputs.plugin != './' }}
         run: |
-          if [ "${{ inputs.plugin }}" == "Fundamental" ] || [ "${{ inputs.plugin }}" == "CountModula" || [ "${{ inputs.plugin }}" == "Sapphire" ]; then
+          if [ "${{ inputs.plugin }}" == "Fundamental" ] || [ "${{ inputs.plugin }}" == "CountModula" || [ "${{ inputs.plugin }}" == "CosineKitty-Sapphire" ]; then
             subdir="metamodule"
           else
             subdir=""
