--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ set(PLUGINS
 foreach(plugin ${PLUGINS})
 
     set(project_cmake_root ${plugin})
-    if ((plugin STREQUAL "Fundamental") OR (plugin STREQUAL "CountModula") OR (plugin STREQUAL "Sapphire") OR (plugin STREQUAL "FrozenWasteland"))
+    if ((plugin STREQUAL "Fundamental") OR (plugin STREQUAL "CountModula") OR (plugin STREQUAL "Sapphire") OR (plugin STREQUAL "CVfunk") OR (plugin STREQUAL "FrozenWasteland"))
         set(project_cmake_root "${plugin}/metamodule")
     endif()
 
