Add ProducerPack to CI

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -21,6 +21,7 @@ on:
           - Geodesics
           - NANOModules
           - OrangeLine
+          - ProducerPack
           - RebelTech
           - Venom
           - kocmoc
