Rename ProducerPack to 4ms-ProducerPack so dir name matches brand slug

--- a/.gitmodules
+++ b/.gitmodules
@@ -51,5 +51,5 @@
 	path = Frequency-Domain
 	url = https://github.com/4ms/Frequency-Domain
 [submodule "ProducerPack"]
-	path = ProducerPack
+	path = 4ms-ProducerPack
 	url = https://github.com/4ms/ProducerPack
