CI/cmake: Use "4ms-ProducerPack" and add 4ms-XOXDrums

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -8,6 +8,8 @@ on:
         required: true
         type: choice
         options:
+          - 4ms-ProducerPack
+          - 4ms-XOXDrums
           - Airwindows
           - Bogaudio
           - CVfunk
@@ -21,7 +23,6 @@ on:
           - Geodesics
           - NANOModules
           - OrangeLine
-          - ProducerPack
           - RebelTech
           - Venom
           - kocmoc
